syntax = "proto3";
package item;
option go_package = "github.com/KolesnikDmitriy/item/api;item";

import "google/api/annotations.proto";

service Item {
    rpc GetItem(GetItemRequest) returns (GetItemResponce) {
        option (google.api.http) = {
            get: "/v1/item/{id}"
        };
    };
}

message GetItemRequest{
    int64 id = 1;
}

message GetItemResponce{
    string title = 1;
    string description = 2;
}